<resources>
    <string name="app_name">Inkwire</string>
    <string name="welcome_to_inkwire">Welcome to Inkwire</string>
    <string name="screenshare_in_progress">Your screen is being shared.</string>
    <string name="share_this_android">Share this Android for another user to see</string>
    <string name="share">Share</string>
    <string name="share_access_code">Share Access Code</string>
    <string name="see_shared_android">See a shared Android</string>
    <string name="access">Access</string>
    <string name="share_access_code_info">To begin sharing your screen, give the access code below to the person who will be assisting you.</string>
    <string name="creating_access_code">Creating Access Code</string>
    <string name="send_link">Send Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="or_send_link">Or send them a link to access your screen:</string>
    <string name="or_invite_link">Or invite them to share their screen with a link:</string>
    <string name="waiting_for_connection">Waiting for connection...</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="allow_screen_capture">Allow Screen Capture</string>
    <string name="remote_user_info">The remote user is able to view your screen and draw on it. You can end the session any time from the notification panel.</string>
    <string name="got_it">Got it</string>
    <string name="enable_the_microphone">Enable the microphone to start a voice chat.</string>
    <string name="mute_chat">Mute Chat</string>
    <string name="stop">Stop</string>
    <string name="enter_access_code">Enter Access Code</string>
    <string name="enter_access_code_info">Ask the user whose Android you wish to access to click "Share" and give you the access code.</string>
    <string name="access_code">Access Code</string>
    <string name="creating_invite_link">Creating Invite Link</string>
    <string name="error_contacting_server">There was an error while connecting to Inkwire servers.</string>
    <string name="connecting_dotdotdot">Connecting&#8230;</string>
    <string name="you_were_invited">Another Inkwire user wants to share their screen with you.</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="session_not_found">Inkwire session not found. It may have expired.</string>
    <string name="connected_to_screenshare">You are viewing a shared screen.</string>
    <string name="enable_microphone">Enable Microphone</string>
    <string name="no_thanks">No Thanks</string>
    <string name="you_were_requested">Another Inkwire user invited you to share your screen.</string>
    <string name="session_disconnected">You were disconnected from the shared screen.</string>
    <string name="confirm_exit">Are you sure you want to exit this screen sharing session?</string>
    <string name="voice_chat_on">Voice chat on</string>
    <string name="remote_user_can_hear_you">The remote user can hear you now</string>
    <string name="voice_chat_off">Voice chat off</string>
    <string name="remote_user_cant_hear_you">The remote user can\'t hear you</string>
    <string name="sharing">Sharing</string>
    <string name="enable_draw_over">You must grant Inkwire permission to draw over other applications to see where your screen sharing participant is clicking.</string>
</resources>
