<?xml version="1.0" encoding="utf-8"?>
<com.koushikdutta.boilerplate.ScrollingToolbarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrolling_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <LinearLayout
                    android:paddingLeft="48dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:paddingLeft="4dp"
                        android:paddingBottom="16dp"
                        android:text="@string/share_this_android"
                        android:textColor="?android:textColorPrimaryInverse"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/share"
                        android:textColor="@android:color/white"
                        android:text="@string/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <LinearLayout
                    android:paddingLeft="48dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:paddingLeft="4dp"
                        android:paddingBottom="16dp"
                        android:text="@string/see_shared_android"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/access"
                        android:textColor="@android:color/white"
                        android:text="@string/access"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>


    <LinearLayout
            android:background="?attr/colorPrimary"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <FrameLayout
                android:background="?attr/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/icon_list_drawer_activity_statusbar_height"/>

        <androidx.appcompat.widget.Toolbar
                app:title="@string/welcome_to_inkwire"
                android:id="@+id/toolbar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                />

    </LinearLayout>

</com.koushikdutta.boilerplate.ScrollingToolbarLayout>